syntax = "proto3";

option csharp_namespace = "MPS.Infrastructure.GRPC";

// Service for MessageRouterSystem
service MessageRouterService {
    // Bidirectional streaming for sending and receiving messages
    rpc SendMessageStream (stream MessageRequest) returns (stream ValidationResponse);
}

// Service for MessageProcessSystem
service MessageProcessService {
    // Bidirectional streaming for processing and validating messages
    rpc ValidateMessageStream (stream MessageRequest) returns (stream ValidationResponse);
}

// Messages
message MessageRequest {
    string id = 1;          // Unique ID of the message
    string sender = 2;      // Sender of the message
    string message_text = 3; // Text of the message
}

message ValidationResponse {
    string id = 1;          // ID of the validated message
    bool is_valid = 2;      // Validation status
    string validation_message = 3; // Validation result message
}